--- a/html/index.html
+++ b/html/index.html
@@ -35,11 +35,10 @@
         <!-- 動画の斜めエフェクト -->
         <!-- キャッチコピーここから -->
         <div class="title_text_box" data-aos="fade-right" data-aos-offset="20" data-aos-easing="ease-in-sine">
-            <p>自分の人生を、<br>生きろ。</p>
+            <p>自分の人生を、生きろ。</p>
         </div>
         <div class="title_text_box2" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
-            <span class="be_a_driver">Love the life you live.
-                Live the life you love.</span>
+            <span class="be_a_driver">Love the life you live.Live the life you love.</span>
         </div>
         <!-- キャッチコピーここまで -->
         <!-- 動画 -->
@@ -78,16 +77,16 @@
             <section class="contents_right" id="aboutus">
                 <!-- about usここから -->
                 <article class="aboutus">
-                    <p>
                         <h2>About Us</h2>
+                    <p>
                         当社はエグゼクティブクラスのヘッドハンティングを中心とした人財紹介会社として2015年に設立されました。
                         社長・役員、経営幹部などエグゼクティブ層を対象とした方々のキャリアコンサルティングを専門に行っています。
                         また、人財のご紹介に留まらず、企業分析・事業戦略立案・アセスメント等のサービスも提供しております。
                     </p>
                 </article>
                 <article class="aboutus">
-                    <p>
                         <h2>CEO Profile</h2>
+                    <p>
                         ABC大学ABC学部卒業。ABC商事株式会社入社。新規事業に従事。その後、独立し起業。海外貿易、経営コンサル、M&Aコンサル、エグゼクティブサーチのコンサルタントを行う。木曾路はすべて山の中である。あるところは岨づたいに行く崖の道であり、あるところは数十間の深さに臨む木曾川の岸であり、あるところは山の尾をめぐる谷の入り口である。一筋の街道はこの深い森林地帯を貫いていた<br>
                         <span class="red">得意分野：ハイスペック・ファイナンス・グローバル人材</span>
                     </p>
@@ -104,8 +103,8 @@
             </section>
         </div>
     </main>
-    <footer class="footer">
-        フッター
+    <footer>
+        Copyright 20XX ABC All Rights Reserved.
     </footer>
 </body>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
