serviceの文字幅修正、大PCの時のスマホメニューの日表示設定。

--- a/assets/index.html
+++ b/assets/index.html
@@ -35,57 +35,41 @@
             </section>
         </nav>
         <!-- ナブメニューここまで -->
-
-<!-- スマホ用ナブメニューここから -->
-
-<!--    Made by Erik Terwan    -->
-<!--   24th of November 2015   -->
-<!--        MIT License        -->
-<section role="navigation">
-  <div id="menuToggle">
-    <!--
+        <!-- スマホ用ナブメニューここから -->
+        <!--    Made by Erik Terwan    -->
+        <!--   24th of November 2015   -->
+        <!--        MIT License        -->
+        <section role="navigation">
+            <div id="menuToggle" class="sumaho_none">
+                <!--
     A fake / hidden checkbox is used as click reciever,
     so you can use the :checked selector on it.
     -->
-    <input type="checkbox" />
-
-    <!--
-    Some spans to act as a hamburger.
-
-    They are acting like a real hamburger,
-    not that McDonalds stuff.
-    -->
-    <span></span>
-    <span></span>
-    <span></span>
-
-    <!--
-    Too bad the menu has to be inside of the button
-    but hey, it's pure CSS magic.
-    -->
-    <ul id="menu">
-                        <li class="nav-li active-nav"><a href="#top">TOP</a></li>
-                        <li class="nav-li"><a href="#news">NEWS</a></li>
-                        <li class="nav-li"><a href="#aboutus">ABOUT</a></li>
-                        <li class="nav-li"><a href="#company">COMPANY</a></li>
-                        <li class="nav-li"><a href="#access">ACCESS</a></li>
-                        <li class="nav-li"><a href="#contact">CONTACT</a></li>
-                        <li class="nav-li"><a href="#service">SERVICE</a></li>
-    </ul>
-  </div>
-</section>
-
-<!-- スマホ用ナブメニューここまで -->
-
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul id="menu">
+                    <li class="nav-li active-nav"><a href="#top">TOP</a></li>
+                    <li class="nav-li"><a href="#news">NEWS</a></li>
+                    <li class="nav-li"><a href="#aboutus">ABOUT</a></li>
+                    <li class="nav-li"><a href="#company">COMPANY</a></li>
+                    <li class="nav-li"><a href="#access">ACCESS</a></li>
+                    <li class="nav-li"><a href="#contact">CONTACT</a></li>
+                    <li class="nav-li"><a href="#service">SERVICE</a></li>
+                </ul>
+            </div>
+        </section>
+        <!-- スマホ用ナブメニューここまで -->
         <!-- 動画の斜めエフェクト -->
         <div class="bg"></div>
         <div class="bg bg2"></div>
         <div class="bg bg3"></div>
         <!-- 動画の斜めエフェクト -->
         <!-- キャッチコピーここから -->
-        <section class="title_box">
+        <section class="title_box" data-aos="zoom-out" data-aos-delay="1500">
             <div class="title_text">
-                Be a Driver.
+                Exective Serch Firm
             </div>
         </section>
         <!-- キャッチコピーここまで -->
@@ -118,7 +102,7 @@
                 <article class="news">
                     <h2>News</h2>
                     <p>
-                        2019.10.1 Webサイトをリニューアル。
+                        <b>2019.10.1</b>&nbsp;&nbsp;&nbsp;Webサイトをリニューアル。
                     </p>
                 </article>
             </section>
@@ -133,7 +117,7 @@
                     </p>
                 </article>
                 <article class="profile">
-                    <h2>CEO Profile</h2>
+                    <h2>CEO</h2>
                     <p>
                         一橋大学法学部卒業。三菱商事株式会社入社。ディーリング事業部にて新規事業に従事し、その後独立し起業。海外貿易、経営コンサル、M&Aコンサル、エグゼクティブサーチファーム事業、メディカル分野事業に携わる。<b>得意分野は、ハイスペック・ファイナンス・グローバル人材。</b>
                     </p>
@@ -300,7 +284,7 @@
                     虹は見えても渡れない<br>
                     雲をつかむようなうかれた話<br>
                     虹を渡って雲をつかんで<br>
-                    君にあげるよ　ほんとの話<br>
+                    君にあげるよ ほんとの話<br>
                     <br>
                     笑う人には笑っといてもらおう<br>
                     風は西から強くなっていく
