9/11　学校作業分　アップ。 サービス1024px以下の高さ調整中の途中。

--- a/assets/index.html
+++ b/assets/index.html
@@ -219,13 +219,10 @@
             </section>
             <section class="contents_left3" id="contact" data-aos="fade-up">
                 <!-- contactここから -->
-                <article class="contact">
                     <h2>CONTACT</h2>
-                    <div class="container_contact">
-                        <div class="row body">
-                        </div>
-                    </div>
-                </article>
+                    <p>
+                        コンタクトフォームが入る。Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque veritatis, nam amet ut quae sed facere saepe recusandae modi voluptatem maxime, dolorum nemo quia similique perspiciatis ex! Ratione numquam, dolore. Dolores dolore corporis maxime nesciunt omnis vero illo, veniam consequuntur quam ea vel voluptas est, reprehenderit deserunt nihil possimus deleniti!
+                    </p>
             </section><!-- contactここまで -->
         </div><!-- continerここまで -->
         <!--         serviceここから -->
@@ -428,8 +425,7 @@ function setBgImg(object) {
 
 }).call(this);
 </script>
-<script>
-/*AOS*/
+<script>/*AOS*/
 AOS.init();
 </script>
 <script>
