--- a/html/index.html
+++ b/html/index.html
@@ -36,15 +36,9 @@
         </nav>
         <!-- ナブメニューここまで -->
         <!-- スマホ用ナブメニューここから -->
-        <!--    Made by Erik Terwan    -->
-        <!--   24th of November 2015   -->
-        <!--        MIT License        -->
         <section role="navigation">
             <div id="menuToggle" class="sumaho_none">
-                <!--
-    A fake / hidden checkbox is used as click reciever,
-    so you can use the :checked selector on it.
-    -->
+
                 <input type="checkbox" />
                 <span></span>
                 <span></span>
@@ -62,11 +56,12 @@
         </section>
         <!-- スマホ用ナブメニューここまで -->
         <!-- 動画の斜めエフェクト -->
-    <section class="bg_naname">
-        <div class="bg"></div>
-        <div class="bg bg2"></div>
-        <div class="bg bg3"></div>
-    </section>
+
+
+<div class="bg"></div>
+<div class="bg bg2"></div>
+<div class="bg bg3"></div>
+
         <!-- 動画の斜めエフェクト -->
         <!-- キャッチコピーここから -->
         <section class="title_box" data-aos="zoom-out" data-aos-delay="1500">
@@ -77,7 +72,7 @@
         <!-- キャッチコピーここまで -->
         <!-- 動画 -->
         <div class="box">
-            <video src="images/top_movie.mp4" class="fitMovie" preload="metadata" autoplay loop muted>
+<video src="images/top_movie.mp4" class="fitMovie" preload="metadata" autoplay loop muted>
         </div>
         <!-- 動画ここまで -->
     </header>
@@ -87,6 +82,7 @@
         <!-- スクロールボタンここまで -->
     </section>
     <main id="main">
+<section class="wrapwrap">
         <!-- <section class="naname_iroiro"> -->
             <!-- //斜めの背景 -->
             <div class="top_sankaku" id="news"></div>
@@ -255,6 +251,7 @@
                 </div>
             </article>
         </section>
+</section><!-- wrapwrap -->
         <!--         serviceここから -->
     </main>
     <footer>
